# nyan-nyan-derby

./: .gitignore  ARCHITECTURE.md  DEPLOY_GUIDE_ZH.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  fix_db.py  pyproject.toml  start.py
backend/alembic/: env.py
backend/app/: db.py  main.py
backend/app/api/: auth.py  matches.py  players.py  stages.py  tournaments.py
backend/app/core/: create_admin.py  security.py
backend/app/models/: __init__.py  tournament.py  user.py  view_models.py
backend/app/services/: player_service.py  tournament_service.py  user_service.py
backend/app/services/logic/: draw_engine.py  progression.py  scoring.py
backend/tests/: test_draw_engine.py  test_progression.py  test_scoring.py
frontend/: Dockerfile  LOCALIZATION_SUMMARY.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  i18n.ts  main.ts  style.css
frontend/src/api/: matches.ts  players.ts  stages.ts  tournaments.ts
frontend/src/assets/styles/: game-theme.css
frontend/src/components/: GroupDrawCeremony.vue  MatchCard.vue  PlayerMatchCard.vue  PreTournament.vue
frontend/src/locales/: en.json  ja.json  zh.json
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: AdminDashboard.vue  Home.vue  LiveTournament.vue  Login.vue  Profile.vue  RefereeDashboard.vue
frontend/src/views/standings/: StageStandings.vue
scripts/: seed_test_data.py
verification/: verify_i18n.py
